# GUtilitiesAPI

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  apigen.py  config.h.in
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: FindWDL.cmake
include/: api.hpp  api_cfg.hpp  api_creator.hpp  api_manager.hpp  audio_buffer.hpp  audio_source.hpp  filesystem.hpp  gu_api.hpp  gu_audio_buffer.hpp  gu_audio_source.hpp  gu_file_finder.hpp  gu_ini_file.hpp  gu_maths.hpp  gu_reaper_wrapper.hpp  gu_recursive_importer.hpp  gu_time_printer.hpp  gu_wildcard_parser.hpp  ini_file.hpp  managed_object.hpp  maths.hpp  profiler.hpp  reaper_wrapper.hpp  reascript_vararg.hpp  time_printer.hpp  wildcard_parser.hpp
scripts/: apigen.py
source/: CMakeLists.txt  api.cpp  api_cfg.cpp  api_creator.cpp  api_manager.cpp  audio_buffer.cpp  audio_source.cpp  filesystem.cpp  gu_api.cpp  gu_audio_buffer.cpp  gu_audio_source.cpp  gu_file_finder.cpp  gu_filesystem.cpp  gu_ini_file.cpp  gu_main.cpp  gu_maths.cpp  gu_profiler.cpp  gu_reaper_wrapper.cpp  gu_recursive_importer.cpp  gu_time_printer.cpp  gu_wildcard_parser.cpp  ini_file.cpp  main.cpp  managed_object.cpp  maths.cpp  my_plugin.cpp  my_plugin.hpp  profiler.cpp  reaper_wrapper.cpp  time_printer.cpp  version.h.in  wildcard_parser.cpp
src/: CMakeLists.txt  api_manager.cpp  api_manager.hpp  gu_api.cpp  gu_api.hpp  gu_audio_analysis.cpp  gu_audio_analysis.hpp  gu_audio_buffer.cpp  gu_audio_buffer.hpp  gu_audio_source.cpp  gu_audio_source.hpp  gu_file_finder.cpp  gu_file_finder.hpp  gu_ini_file.cpp  gu_ini_file.hpp  gu_main.cpp  gu_maths.cpp  gu_maths.hpp  gu_profiler.cpp  gu_reaper_wrapper.cpp  gu_reaper_wrapper.hpp  gu_recursive_importer.cpp  gu_recursive_importer.hpp  gu_time_printer.cpp  gu_time_printer.hpp  gu_wildcard_parser.cpp  gu_wildcard_parser.hpp  reaper_vararg.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
